WEB-1944 fixed overflowing text for text criteria on event forms

--- a/fid-web/src/main/webapp/style/pageStyles/event.css
+++ b/fid-web/src/main/webapp/style/pageStyles/event.css
@@ -99,6 +99,8 @@
     padding-top: 10px;
     display:block;
     float:left;
+    max-width: 400px;
+    padding-bottom: 10px;
 }
 
 .eventForm div.infoSet span, .eventForm div.infoSet div.simpleContainer {
